parsing presque fini.location parsing en recursive initier

--- a/test.conf
+++ b/test.conf
@@ -1,4 +1,12 @@
 server {
 
+    server_name youpi
+
+    listen localhost:200
+
     root ./test/root
+
+    index index.html
+
+    allow_methods GET
 }
