Parsing du fichier conf, overload << de Config DONE  Merge avec la branch main apres test

--- a/webserv.conf
+++ b/webserv.conf
@@ -64,7 +64,7 @@ server {
 
         root ./YoupiBanane/put_here
 
-        alias
+        alias /test
 
     }
 
@@ -112,7 +112,7 @@ server {
 
         root ./YoupiBanane/put_here
 
-        alias
+        alias /test
 
     }
 
