--- a/test2.conf
+++ b/test2.conf
@@ -1,25 +1,31 @@
 server {
-
-server_name youpi
-
-listen localhost:8080
-
-root ./test/root
-
-index index.html
-
-allow_methods GET
+	server_name localhost/PORT
+	listen localhost:8080
+	root ./test/root
+	index index.html
+	allow_methods GET
 }
 
 server {
+	server_name IP/PORT
+	listen 127.0.0.1:8080
+	root ./test/root
+	index index.html
+	allow_methods GET
+}
 
-    server_name youpi
+server {
+	server_name PORT_only
+	listen 8080
+	root ./test/root
+	index index.html
+	allow_methods GET
+}
 
-    listen 127.0.0.2:8081
-
-    root ./test/root
-
-    index index.html
-
-    allow_methods GET
+server {
+	server_name localhost_only
+	listen localhost
+	root ./test/root
+	index index.html
+	allow_methods GET
 }
