Webserv class looking better

--- a/test2.conf
+++ b/test2.conf
@@ -24,7 +24,7 @@ server {
 
 server {
 	server_name localhost_only
-	listen localhost
+	listen 127.0.0.1
 	root ./test/root
 	index index.html
 	allow_methods GET
