--- a/configs/test2.conf
+++ b/configs/test2.conf
@@ -1,7 +1,7 @@
 server {
 	server_name localhost/PORT
 	listen localhost:8080
-	root ./test/root
+	root ./test/root1
 	index index.html
 	allow_methods GET
 }
@@ -9,7 +9,7 @@ server {
 server {
 	server_name IP/PORT
 	listen 127.0.0.1:8080
-	root ./test/root
+	root ./test/root2
 	index index.html
 	allow_methods GET
 }
@@ -17,7 +17,7 @@ server {
 server {
 	server_name PORT_only
 	listen 8080
-	root ./test/root
+	root ./test/root3
 	index index.html
 	allow_methods GET
 }
@@ -25,7 +25,7 @@ server {
 server {
 	server_name localhost_only
 	listen 127.0.0.1
-	root ./test/root
+	root ./test/root4
 	index index.html
 	allow_methods GET
 }
