--- a/configs/test2.conf
+++ b/configs/test2.conf
@@ -1,4 +1,12 @@
 server {
+	server_name IP/PORT
+	listen 127.0.0.1:8080
+	root ./test/root1/test
+	index index.html
+	allow_methods POST GET
+}
+
+server {
 	server_name localhost/PORT
 	listen localhost:8080
 	root ./test/root1
@@ -9,15 +17,15 @@ server {
 server {
 	server_name IP/PORT
 	listen 127.0.0.1:8080
-	root ./test/root2
+	root ./test/root1/test
 	index index.html
-	allow_methods GET
+	allow_methods DELETE
 }
 
 server {
 	server_name PORT_only
-	listen 8080
-	root ./test/root3
+	listen 8084
+	root ./test/root2
 	index index.html
 	allow_methods GET
 }
@@ -25,7 +33,7 @@ server {
 server {
 	server_name localhost_only
 	listen 127.0.0.1
-	root ./test/root4
+	root ./test/root3
 	index index.html
 	allow_methods GET
 }
