--- a/pages/error_pages.conf
+++ b/pages/error_pages.conf
@@ -5,5 +5,5 @@ server {
 	error_page 405 ./pages/error_pages/405.html
 	error_page 410 ./pages/error_pages/410.html
 	error_page 413 ./pages/error_pages/413.html
-	error_page 500 ./pages/error_pages/500.html
+	error_page 500 502 503 504 ./pages/error_pages/500.html
 }
