segfault Slayed. sending correct header for error 413 and 405

--- a/configs/test.conf
+++ b/configs/test.conf
@@ -6,7 +6,9 @@ server {
 
     root ./pages/index
 
+	client_body_buffer_size 1
+
     index index.html
 
-    allow_methods GET
+    allow_methods GET POST
 }
