send response working! error 405 and 413 managed init of error 404

--- a/configs/test.conf
+++ b/configs/test.conf
@@ -8,6 +8,9 @@ server {
 
 	client_body_buffer_size 1
 
+	error_page 405 ./pages/error_pages/405.html
+	error_page 413 ./pages/error_pages/413.html
+
     index index.html
 
     allow_methods GET POST
