i find a lot of bug for exemple location block never the real one but i fix the error pages parse and add default config to webserv

--- a/configs/test.conf
+++ b/configs/test.conf
@@ -4,14 +4,12 @@ server {
 
     listen localhost:8080
 
-    root ./pages/index
+	client_body_buffer_size 10
 
-	client_body_buffer_size 1
-
-	error_page 405 ./pages/error_pages/405.html
-	error_page 413 ./pages/error_pages/413.html
-
-    index index.html
-
+    location /index {
+    root ./pages
+    alias /index
+    index basic.html
+    }
     allow_methods GET POST
 }
