BUG ALWAYS THE SAME REQUEST

--- a/configs/test.conf
+++ b/configs/test.conf
@@ -6,10 +6,9 @@ server {
 
 	client_body_buffer_size 10
 
-    location /index {
-    root ./pages
-    alias /index
+    root ./pages/index
+
     index basic.html
-    }
+
     allow_methods GET POST
 }
