--- a/configs/test.conf
+++ b/configs/test.conf
@@ -9,6 +9,10 @@ server {
     root ./pages/index
 
     index basic.html
-
+    location /pages/index
+    {
+        root .
+        index cookies.html
+    }
     allow_methods POST GET
 }
