--- a/pages/default.conf
+++ b/pages/default.conf
@@ -6,4 +6,6 @@ server {
 	error_page 410 ./pages/error_pages/410.html
 	error_page 413 ./pages/error_pages/413.html
 	error_page 500 502 503 504 ./pages/error_pages/500.html
+
+	index basic.html
 }
