modify config file and default config file to fix readeing unitialize value

--- a/configs/test.conf
+++ b/configs/test.conf
@@ -9,10 +9,11 @@ server {
     root ./pages/index
 
     index basic.html
-    location /pages/index
+    location /pages/index/index
     {
         root .
         index cookies.html
+		allow_methods POST GET
     }
     allow_methods POST GET
 }
