--- a/configs/test2_sav.conf
+++ b/configs/test2_sav.conf
@@ -4,7 +4,7 @@ server_name youpi
 
 listen localhost:8080
 
-root ./test/root
+root ./pages/index
 
 index index.html
 
@@ -17,7 +17,7 @@ server {
 
     listen localhost:8081
 
-    root ./test/root
+    root ./pages/index
 
     index index.html
 
@@ -31,7 +31,7 @@ server {
 
     listen localhost:8082
 
-    root ./test/root
+    root ./pages/index
 
     index index.html
 
@@ -44,7 +44,7 @@ server {
 
     listen localhost:8083
 
-    root ./test/root
+    root ./pages/index
 
     index index.html
 
@@ -57,7 +57,7 @@ server {
 
     listen 127.0.0.2:8080
 
-    root ./test/root
+    root ./pages/index
 
     index index.html
 
@@ -70,7 +70,7 @@ server {
 
     listen 127.0.0.2:8081
 
-    root ./test/root
+    root ./pages/index
 
     index index.html
 
@@ -83,7 +83,7 @@ server {
 
     listen 127.0.0.2:8082
 
-    root ./test/root
+    root ./pages/index
 
     index index.html
 
@@ -96,7 +96,7 @@ server {
 
     listen 127.0.0.2:8083
 
-    root ./test/root
+    root ./pages/index
 
     index index.html
 
@@ -109,9 +109,9 @@ server {
 
     listen 127.0.0.3:8085
 
-    root ./test/root
+    root ./pages/index
 
-    index index.html
+    index basic.html
 
     allow_methods GET
 }
