--- a/pages/default.conf
+++ b/pages/default.conf
@@ -6,6 +6,7 @@ server {
 	error_page 410 ./pages/error_pages/410.html
 	error_page 413 ./pages/error_pages/413.html
 	error_page 500 502 503 504 ./pages/error_pages/500.html
-
+	client_body_buffer_size 1054
+	listen 0.0.0.0:0
 	index basic.html
 }
