try to have right index while  parsing but some behaviour to fix

--- a/configs/test.conf
+++ b/configs/test.conf
@@ -9,7 +9,7 @@ server {
     root ./pages/index
 
     index basic.html
-    location /pages/index/index
+    location /pages/inde
     {
         root .
         index cookies.html
