GET and DELETE methods done

--- a/configs/test.conf
+++ b/configs/test.conf
@@ -6,7 +6,7 @@ server {
 
 	client_body_buffer_size 5000
 
-    root ./pages/index/
+    root ./pages/index
 
     index basic.html
     location /index
@@ -16,5 +16,5 @@ server {
         index cookies.html
 		allow_methods POST GET
     }
-    allow_methods POST GET
+    allow_methods POST GET DELETE
 }
