CGI class Working well still need optimisation

--- a/configs/test.conf
+++ b/configs/test.conf
@@ -16,5 +16,11 @@ server {
         index cookies.html
 		allow_methods POST GET
     }
+	location *.php
+	{
+		alias ./pages/index
+		allow_methods POST GET
+		cgi_pass /bin/php-cgi7.4
+	}
     allow_methods POST GET DELETE
 }
