--- a/configs/default.conf
+++ b/configs/default.conf
@@ -10,6 +10,12 @@ server {
     root /home/user42/Documents/42-webserv/pages/index
 
     index basic.html
+	location *.php
+	{
+		alias ./pages/index
+		allow_methods POST GET
+		cgi_pass /home/user42/Documents/42-webserv/cgi/linux_phpcgi
+	}
 	allow_methods POST GET DELETE
 }
 
@@ -23,6 +29,13 @@ server {
 	client_body_buffer_size 5000
 
     root /home/user42/Documents/42-webserv/pages/index
+
+	location *.php
+	{
+		alias ./pages/index
+		allow_methods POST GET
+		cgi_pass /home/user42/Documents/42-webserv/cgi/linux_phpcgi
+	}
 
     index index.php
 	allow_methods POST GET DELETE
