change place of find index and fix bug on personalize error pages

--- a/configs/test.conf
+++ b/configs/test.conf
@@ -8,9 +8,12 @@ server {
 
 	client_body_buffer_size 5000
 
+	error_page 403 ./pages/pimp_my_pages/403.html
+	error_page 404 ./pages/pimp_my_pages/403.htmlsedfs
+
     root ./pages/index
 
-    index basic.html
+    index index.php
     location /index
     {
 
