start Post response & fix index

--- a/configs/test.conf
+++ b/configs/test.conf
@@ -27,5 +27,11 @@ server {
 		allow_methods POST GET
 		cgi_pass /bin/php-cgi7.4
 	}
+	location *.c
+	{
+		alias ./pages/index
+		allow_methods POST GET
+		cgi_pass ./pages/index/count.cgi
+	}
     allow_methods POST GET DELETE
 }
