--- a/configs/test.conf
+++ b/configs/test.conf
@@ -9,15 +9,17 @@ server {
 	client_body_buffer_size 5000
 
 	error_page 403 ./pages/pimp_my_pages/403.html
-	error_page 404 ./pages/pimp_my_pages/404.html
 
     root ./pages/index
 
-    index index.php
-    location /index
-    {
+	autoindex on
 
-        alias ./pages/index
+    index basic.html
+    location /detox
+    {
+		autoindex on
+		root ./pages
+        alias /index
         index cookies.html
 		allow_methods POST GET
     }
