Added function to prevent same IP/PORT to launch duplicate socket, added mime types in response class, made some cleaning

--- a/configs/default.conf
+++ b/configs/default.conf
@@ -7,7 +7,7 @@ server {
 
 	client_body_buffer_size 5000
 
-    root /home/user42/Documents/42-webserv/pages/index
+    root ./pages/index
 
     index basic.html
 	location *.php
@@ -28,7 +28,7 @@ server {
 
 	client_body_buffer_size 5000
 
-    root /home/user42/Documents/42-webserv/pages/index
+    root ./pages/index
 
 	location *.php
 	{
