--- a/configs/test.conf
+++ b/configs/test.conf
@@ -35,5 +35,5 @@ server {
 		allow_methods POST GET
 		cgi_pass ./pages/index/count.cgi
 	}
-    allow_methods POST GET DELETE
+    allow_methods POST GET DELETE LINK PUT
 }
