Form and conf modified

--- a/configs/test.conf
+++ b/configs/test.conf
@@ -6,7 +6,7 @@ server {
 
     listen localhost:8000
 
-	client_body_buffer_size 5000
+	client_body_buffer_size 10000
 
 	error_page 403 ./pages/pimp_my_pages/403.html
 
@@ -27,6 +27,7 @@ server {
 	{
 		alias ./pages/index
 		allow_methods POST GET
+		client_body_buffer_size 1000000
 		cgi_pass /bin/php-cgi7.4
 	}
 	location *.c
