Added 301 page and a redirect directive in test.conf

--- a/configs/test.conf
+++ b/configs/test.conf
@@ -15,6 +15,12 @@ server {
 	autoindex on
 
     index basic.html
+
+	location /google
+    {
+		redirect 301 https://www.google.com
+    }
+
     location /detox
     {
 		autoindex on
