Status code 204 for POST, 408 reworked again

--- a/configs/test.conf
+++ b/configs/test.conf
@@ -16,6 +16,11 @@ server {
 
     index basic.html
 
+	location /google
+    {
+		redirect 301 https://www.google.com
+    }
+
     location /detox
     {
 		autoindex on
