--- a/configs/test.conf
+++ b/configs/test.conf
@@ -18,7 +18,7 @@ server {
 
 	location /google
     {
-		redirect 301 https://www.google.com
+		return 301 https://www.google.com
     }
 
     location /detox
