finish for correction

--- a/configs/server_name.conf
+++ b/configs/server_name.conf
@@ -1,7 +1,6 @@
 server {
 
 	server_name youpi
-	server_name testhtml.com
 
     listen 127.0.0.1:8000
 
@@ -9,20 +8,19 @@ server {
 
     root ./pages/index
 
-    index basic.html
+    autoindex on
 	location *.php
 	{
 		alias ./pages/index
 		allow_methods POST GET
-		cgi_pass /home/user42/Documents/42-webserv/cgi/linux_phpcgi
+		cgi_pass /bin/php-cgi7.4
 	}
 	allow_methods POST GET DELETE
 }
 
 server {
 
-	server_name test youpi2
-	server_name testphp.com
+	server_name test
 
     listen localhost:8000
 
@@ -34,10 +32,11 @@ server {
 	{
 		alias ./pages/index
 		allow_methods POST GET
-		cgi_pass /home/user42/Documents/42-webserv/cgi/linux_phpcgi
+		cgi_pass /bin/php-cgi7.4
 	}
 
-    index index.php
+	autoindex on
+    index basic.html
 	allow_methods POST GET DELETE
 
 }
