--- a/configs/test.conf
+++ b/configs/test.conf
@@ -9,6 +9,7 @@ server {
 	client_body_buffer_size 10000
 
 	error_page 403 ./pages/pimp_my_pages/403.html
+	error_page 404 ./pages/pimp_my_pages/404.html
 
     root ./pages/index
 
