cleand cgi de merde

--- a/configs/curl.conf
+++ b/configs/curl.conf
@@ -1,15 +1,17 @@
 server {
-	server_name example.com;
-	listen		:8000;
+	server_name example.com
+	listen		8000
 
-	root		tests/www/html/webservA;
-	index		index.html;
+	root		./pages/index
+	index		basic.html
+	allow_methods GET
 }
 
 server {
-	server_name webserv.com;
-	listen		:8000;
+	server_name webserv.com
+	listen		8000
 
-	root		tests/www/html/webservB;
-	index		index.html;
+	root		./pages/index
+	index		test_upload.html
+	allow_methods GET
 }
